[507338] don't endorse directories when running Tomcat with Java 9 - update version numbers
Change-Id: Ic4a667cf5c6c25cc528b318434d54cb0357c2526