@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2011 IBM Corporation and others.
+ * Copyright (c) 2003, 2017 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -26,6 +26,7 @@ import org.eclipse.debug.core.model.IProcess;
 import org.eclipse.jdt.launching.IJavaLaunchConfigurationConstants;
 import org.eclipse.jdt.launching.IRuntimeClasspathEntry;
 import org.eclipse.jdt.launching.IVMInstall;
+import org.eclipse.jdt.launching.IVMInstall2;
 import org.eclipse.jdt.launching.JavaRuntime;
 import org.eclipse.jst.server.core.IJ2EEModule;
 import org.eclipse.jst.server.core.IWebModule;
@@ -627,7 +628,7 @@ public class TomcatServerBehaviour extends ServerBehaviourDelegate implements IT
 	public String toString() {
 		return "TomcatServer";
 	}
-	
+
 	protected static int getNextToken(String s, int start) {
 		int i = start;
 		int length = s.length();
@@ -646,7 +647,7 @@ public class TomcatServerBehaviour extends ServerBehaviourDelegate implements IT
 		}
 		return -1;
 	}
-	
+
 	/**
 	 * Merge the given arguments into the original argument string, replacing
 	 * invalid values if they have been changed.  Special handling is provided
@@ -882,8 +883,9 @@ public class TomcatServerBehaviour extends ServerBehaviourDelegate implements IT
 				existingVMArgs = filteredVMArgs.toString();
 			}
 		}
+		String mergedVMArguments = mergeArguments(existingVMArgs, configVMArgs, null, false);
 		workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_VM_ARGUMENTS,
-				mergeArguments(existingVMArgs, configVMArgs, null, false));
+				mergedVMArguments);
 		
 		ITomcatRuntime runtime = getTomcatRuntime();
 		IVMInstall vmInstall = runtime.getVMInstall();
@@ -931,6 +933,19 @@ public class TomcatServerBehaviour extends ServerBehaviourDelegate implements IT
 						oldCp.set(toolsIndex, toolsJar); 
 					else
 						mergeClasspath(oldCp, toolsJar);
+				}
+
+				String version = null;
+				if (vmInstall instanceof IVMInstall2) {
+					version = ((IVMInstall2) vmInstall).getJavaVersion();
+				}
+				if (version == null || !version.startsWith("9")) {
+					String endorsedDirectories = getTomcatVersionHandler().getEndorsedDirectories(getServer().getRuntime().getLocation());
+					if (endorsedDirectories.length() > 0) {
+						String[] endorsements = new String[]{"-Djava.endorsed.dirs=\"" + endorsedDirectories + "\""};
+						mergedVMArguments = mergeArguments(mergedVMArguments, endorsements, null, false);
+						workingCopy.setAttribute(IJavaLaunchConfigurationConstants.ATTR_VM_ARGUMENTS, mergedVMArguments);
+					}
 				}
 			}
 		}
